<resources>
    <string name="app_name">Music Time</string>
    <string name="open_app">Open App</string>

    <string name="signUp_signUp">Sign up</string>
    <string name="signUp_name">Name</string>
    <string name="signUp_email">Email</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_ConfirmPassword">Confirm password</string>
    <string name="signUp_CheckBox">Remember email and password</string>
    <string name="signUp_alreadyHave">Already have an Account?</string>
    <string name="signUp_signIn">Sign In</string>

    <string name="login_signIn">Sign in</string>
    <string name="login_forgotPassword">Forgot password?</string>
    <string name="login_clickHere">Click Here</string>
    <string name="login_needAnAccount">Need an Account?</string>
    <string name="login_signUp">Sign up</string>

    <string name="content_description_email">Email</string>
    <string name="content_description_password">Password</string>
    <string name="content_description_confirm_password">Confirm password</string>
    <string name="content_description_userName">User Name</string>

    <string name="playlists_titleYourFavorites">Your favorites</string>
    <string name="playlists_titleRecommendedPlaylists">Recommended playlists</string>
    <string name="playlists_titleTopArtists">Top artists</string>
    <string name="playlists_titleDrafts">Drafts:</string>
    <string name="countries_buttonFinish">Finish</string>
    <string name="playlists_buttonGoToSuccess">Open success</string>
    <string name="playlists_buttonGoToBrowserFragment">Open URL</string>
    <string name="playlists_buttonGoToFilePickerFragment">Open FilePicker</string>
    <string name="playlists_buttonGoToTimePickerFragment">Open TimePicker</string>
    <string name="playlists_buttonGoToNotificationFragment">See notifications</string>
    <string name="playlists_buttonGoToBroadcastFragment">Open broadcast receiver</string>
    <string name="playlists_buttonGoToLocationFragment">Open location</string>
    <string name="playlists_buttonGoToContactsFragment">Open contacts</string>
    <string name="playlists_buttonGoToWeatherFragment">Open weather</string>
    <string name="playlists_LogOut">Log out</string>

    <string name="success_success">Success!</string>

    <string name="browser_buttonViewUrl">View URL</string>

    <string name="filePicker_buttonFilePickerViewFiles">View files</string>

    <string name="alarm_openTimePicker">See time picker</string>

    <string name="notification_buttonViewNotifications">View notifications</string>
    <string name="notification_name">Notification title</string>
    <string name="notification_description">Description for test notification</string>
    <string name="notification_name2">Notification title2</string>
    <string name="notification_description2">Description for test notification2</string>
    <string name="foregroundNotification_name">Foreground notification title</string>
    <string name="foregroundNotification_description">Foreground description for test notification</string>

    <string name="contacts_buttonSeeContacts">See contacts</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_description">This is an app widget description</string>

    <string name="widget_text_city">City: %1$s</string>
    <string name="widget_text_temperature">Temperature: %1$s °C</string>
    <string name="widget_text_humidity">Humidity: %1$s %%</string>

    <string name="location_buttonSeeMap">See map</string>
    <string name="location_passedDistance">Passed distance: %1$s</string>
    <string name="location_calculateDistance">Calculate distance</string>
    <string name="location_stopCalculateDistance">Stop calculating</string>
    <string name="location_clearPolyline">Clear polyline</string>

    <string name="weather_buttonSeeWeather">See weather</string>

    <string name="weather_titleWeatherCurrentLocation">Weather (current location):</string>
    <string name="weather_titleWeatherFlowableLocation">Weather (locations from RxJava function):</string>
</resources>