<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Google maps -->
    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <TextView
        android:id="@+id/text_passedDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_passedDistance"
        android:gravity="center_horizontal"
        style="@style/playlists_title"
        android:textColor="@color/black"
        android:layout_marginBottom="@dimen/space_underElement"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_trackDistance" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_trackDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_calculateDistance"
        android:layout_marginBottom="@dimen/space_underElement"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_clearPolyline" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_clearPolyline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_clearPolyline"
        android:layout_marginBottom="@dimen/space_32"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>