<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true" >

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_yourFavorites"
            style="@style/playlists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_beforeOrAfterElement"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="@dimen/space_underElement"
            android:text="@string/playlists_titleYourFavorites"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/list_yourFavorites"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_yourFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"

            app:layout_constraintTop_toBottomOf="@+id/title_yourFavorites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title_recommendedPlaylists"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_recommendedPlaylists"
            style="@style/playlists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_beforeOrAfterElement"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/space_underElement"
            android:text="@string/playlists_titleRecommendedPlaylists"

            app:layout_constraintTop_toBottomOf="@+id/list_yourFavorites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/list_recommendedPlaylists"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_recommendedPlaylists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"

            app:layout_constraintTop_toBottomOf="@+id/title_recommendedPlaylists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title_topArtists"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_topArtists"
            style="@style/playlists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_beforeOrAfterElement"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/space_underElement"
            android:text="@string/playlists_titleTopArtists"

            app:layout_constraintTop_toBottomOf="@+id/list_recommendedPlaylists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/list_topArtists"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_topArtists"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"

            app:layout_constraintTop_toBottomOf="@+id/title_topArtists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/title_drafts"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_drafts"
            style="@style/playlists_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="@dimen/space_underElement"
            android:text="@string/playlists_titleDrafts"

            app:layout_constraintTop_toBottomOf="@+id/list_topArtists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openSuccess"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openSuccess"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToSuccess"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/list_topArtists"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openBrowserFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openBrowserFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToBrowserFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openSuccess"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openFilePickerFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openFilePickerFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToFilePickerFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openBrowserFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openTimePickerFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openTimePickerFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToTimePickerFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openFilePickerFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openNotificationFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openNotificationFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToNotificationFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openTimePickerFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openBroadcastFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openBroadcastFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToBroadcastFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openNotificationFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openContactsFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openContactsFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToContactsFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openBroadcastFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_openLocationFragment"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_openLocationFragment"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_buttonGoToLocationFragment"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openContactsFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/button_logOut"

            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_logOut"
            style="@style/Widget.AppCompat.ActionButton"
            app:backgroundTint="@null"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/playlists_LogOut"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text"
            android:textStyle="bold"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/space_beforeOrAfterElement"
            android:layout_marginBottom="@dimen/space_beforeOrAfterElement"

            app:layout_constraintTop_toBottomOf="@+id/button_openLocationFragment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"

            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
